Add support for additional ENV variables

--- a/charts/tailscale-proxy/templates/deployment.yml
+++ b/charts/tailscale-proxy/templates/deployment.yml
@@ -56,6 +56,10 @@ spec:
           value: "{{ .Values.destination.ip }}"
         - name: TS_AUTH_ONCE
           value: "true"
+        {{- range $key, $value := .Values.extraEnvVars }}
+        - name: {{ $key }}
+          value: {{ default "" $value | quote }}
+        {{- end }}
         securityContext:
           capabilities:
             add:
